--- a/css/estilo.css
+++ b/css/estilo.css
@@ -138,3 +138,30 @@ footer {
 
 
 
+
+
+
+
+
+
+
+
+/* efecto del boton */
+
+#btnInicio {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    padding: 10px 15px;
+    cursor: pointer;
+    display: none; /* Oculto por defecto */
+    transition: opacity 0.3s ease; /* Transición suave */
+}
+
+#btnInicio:hover {
+    background-color: #0056b3;
+}
