--- a/css/estilo.css
+++ b/css/estilo.css
@@ -131,9 +131,11 @@ footer {
     }
     
     .nav-links {
-        width: 100%;
-        justify-content: center;
+            padding: 0.5rem 0.25rem !important;
+        font-size: 0.85rem !important;
+        white-space: nowrap;
     }
+
 }
 
 
