--- a/css/estilo.css
+++ b/css/estilo.css
@@ -13,7 +13,7 @@ html {
 
 body {
   font-family: 'Poppins', sans-serif;
-  background-color: #f4f6f8;
+  background-color: #d1deeb;
   color: #333;
   line-height: 1.6;
 }
